--- a/module3_backend/m3.lesson01.md
+++ b/module3_backend/m3.lesson01.md
@@ -15,9 +15,8 @@
 ---
 ### Node Introduction
 What is node?
-* <!-- .element: class="fragment" --> A Runtime environment
-for running Javascript outside the browser
-
+* <!-- .element: class="fragment" --> A Runtime environment for running Javascript outside the browser
+https://facebook.github.io/create-react-app/docs/using-the-public-folder
 * <!-- .element: class="fragment" --> It is Not a language
 
 * <!-- .element: class="fragment" --> It is Not infrastructure / Framework -
@@ -25,6 +24,35 @@ Provide basic functionality only
 
 * <!-- .element: class="fragment" --> You can build an app using node only,
 But a common case is to use a Framework (Like Express)
+
+---
+
+### Node Introduction - Global Object
+So.. is node a server?
+
+* Node as a local executable
+<!-- .element: class="fragment" -->
+
+* Node as a server
+<!-- .element: class="fragment" -->
+
+* Node a-synchronicity
+<!-- .element: class="fragment" -->
+
+* Single / multi - threads
+<!-- .element: class="fragment" -->
+
+---
+
+### Node Introduction - REPL
+
+[REPL: Read-Eval-Print-Loop](https://nodejs.org/api/repl.html)
+*  takes single user inputs (i.e., single expressions), evaluates them, and returns the result to the user
+```
+$ node
+> console.log(global.process.ppid)
+7760
+```
 
 ---
 ### Node Introduction - Global Object
@@ -46,6 +74,10 @@ document, setTimeout, setInterval, process(cwd, argv etc.), module
 
 * <!-- .element: class="fragment" --> In the Node.js module system, each file is treated as a separate module
 
+* <!-- .element: class="fragment" --> Public data is being exported and used by [commonjs](https://flaviocopes.com/commonjs/)
+
+* <!-- .element: class="fragment" --> ESModules are supported, but still [experimental](https://medium.com/@giltayar/native-es-modules-in-nodejs-status-and-future-directions-part-i-ee5ea3001f71)
+
 * <!-- .element: class="fragment" --> Built in modules -
 modules which comes with node:
 <!-- .element: class="fragment" -->
@@ -61,7 +93,7 @@ once installed, can be imported in the same way
 const express = require('express');
 ```
 * <!-- .element: class="fragment" --> Modules from external packages -
-You can write you own modules
+Write your own modules
 
 ```
 // calculus.js
@@ -86,15 +118,15 @@ Task 1: create 2 modules: main (app.js) and calculus (calculus.js)
 
 * calculus module
     - contain function processStr
-    - processStr input is a string with an operator and equal sign (1 + 1 =)
-    - processStr output is string with result (1 + 1 = 2)
-    - operators are:  + - / *
+    - processStr input is a string with an operator and equal sign (`1 + 1 =`)
+    - processStr output is string with result (`1 + 1 = 2`)
+    - operators:  `+ - / *`
 
 ---
 ### Working with node
 * Task 2: read input from a text file (input.txt)
 * Task 3: write output to a text file (output.txt)
-* Task 4: let the user choose input and output files (argv)
+* Task 4: let the user choose input and output files (`argv`)
 
 ---
 ### Working with node
@@ -109,8 +141,24 @@ Task 1: create 2 modules: main (app.js) and calculus (calculus.js)
     - send result string to client
 
 ---
+### Working with node
+Bonus:
+* Add create module (log to console + log file)
+* log each http request url
+* on get request to `log` - send log data to client
+
+---
+
 ### Further reading
 * [Node.js Tutorial For Absolute Beginners](https://www.youtube.com/watch?v=U8XF6AFGqlc)
+* [The module wrapper](https://nodejs.org/api/modules.html#modules_the_module_wrapper)
+* [Loading from node_modules Folders](https://nodejs.org/api/modules.html#modules_loading_from_node_modules_folders)
 
-HW:
+---
+
+### HW:
 * Finish Tasks 1 - 7, and com back with questions!
+
+### Extra
+
+ Go briefly through [Node.js Documentation - modules](https://nodejs.org/api/modules.html)
