--- a/module3_backend/m3.lesson01.md
+++ b/module3_backend/m3.lesson01.md
@@ -143,9 +143,9 @@ Task 1: create 2 modules: main (app.js) and calculus (calculus.js)
 ---
 ### Working with node
 Bonus:
-* Add create module (log to console + log file)
-* log each http request url
-* on get request to `log` - send log data to client
+* Create logger module (function `log` is using  to `console.log` + saving to log file)
+* For each http request - log `request.url`
+* On get request to `log` - send log data to client
 
 ---
 
