--- a/module3_backend/m3.lesson01.md
+++ b/module3_backend/m3.lesson01.md
@@ -157,8 +157,7 @@ Bonus:
 ---
 
 ### HW:
-* Finish Tasks 1 - 7, and com back with questions!
+* Finish Tasks 1 - 6 + Bonus and come back with questions!
 
 ### Extra
-
  Go briefly through [Node.js Documentation - modules](https://nodejs.org/api/modules.html)
