--- a/module3_backend/m3.lesson01.md
+++ b/module3_backend/m3.lesson01.md
@@ -145,7 +145,7 @@ Task 1: create 2 modules: main (app.js) and calculus (calculus.js)
 Bonus:
 * Create logger module (function `log` is using  to `console.log` + saving to log file)
 * For each http request - log `request.url`
-* On get request to `log` - send log data to client
+* On get request to `/log` - send log data to client
 
 ---
 
