--- a/module3_backend/m3.lesson02.md
+++ b/module3_backend/m3.lesson02.md
@@ -14,6 +14,7 @@
 4. Routing (next lesson)
 5. MiddleWares (next lesson)
 6. Error handling and redirect (next lesson)
+7. Practice: Form Processing (next lesson)
 
 ---
 ### Node Static Server
@@ -28,6 +29,7 @@ http.createServer(function (req, res) {
 ```
 
 ---
+
 ### Node Static Server - practice
 * build playbuzz / okat-cupid
 ```
@@ -36,13 +38,27 @@ npm run build
 * serve the app (you can use our code from module 1)
 
 ---
+
+### Node Static Server - discussion
+What are the obstacles when building server with node only?
+
+* Managing multiple / complex / nested routes require lots of work & code
+<!-- .element: class="fragment" -->
+
+* Serving static file require lots of code
+<!-- .element: class="fragment" -->
+
+* Adding functionality seems complex (logging, reading request JSON etc.)
+<!-- .element: class="fragment" -->
+
+---
 ### What is [express](https://expressjs.com/)
 * A minimalist web framework for Node.js
 * Based on [connect](https://github.com/senchalabs/connect)
 * Provide an easy way to build complex server
-* Provide Routing, MiddleWares adn serving static files
+* Provide Routing, MiddleWares and serving static files easily
 * Have extension for session management
-* [Most popular](https://www.npmtrends.com/express-vs-fastify-vs-koa-vs-koa-vs-hapi-vs-hapi-vs-sails) node-based server framework
+* [The Most popular](https://www.npmtrends.com/express-vs-fastify-vs-koa-vs-koa-vs-hapi-vs-hapi-vs-sails) node-based server framework
 
 ---
 ### What is express
@@ -70,13 +86,21 @@ app.put('/user', function (req, res) {
   res.send('Got a PUT request at /user')
 })
 ```
+---
+
+### What is express
+Some tips before practice
+* Create a general fall-back route `app.get('*', (req, res) => res.send('Fallback'))`
+* Use [Nodemon](https://scotch.io/courses/build-your-first-nodejs-website/using-express-and-nodemon)
+* Use [Postman](https://www.getpostman.com/) - Do HTTP request without writing a client app
 
 ---
 ### What is express - practice
 Build a simple API with express
-* /posts => return all posts
-* /posts/1 => return post with id 1
-* / =>  redirect to /posts
+* GET /posts => return all posts
+* GET /posts/1 => return post with id 1
+* GET / =>  redirect to /posts
+* DELETE /posts/1 =>  remove post with id 1 from data collection
 * download and use data from [jsonplaceholder](https://jsonplaceholder.typicode.com)
 
 ---
@@ -94,48 +118,49 @@ HTTP Request
 
 ---
 ### [HTTP overview](https://he.wikipedia.org/wiki/Hypertext_Transfer_Protocol#%D7%91%D7%A7%D7%A9%D7%95%D7%AA_HTTP)
-* HTTP methods have purpose
+* Main HTTP methods & purpose (GET, POST, PUT, DELETE)
 * Sometimes more than one can be used
-* HTTP and OSI
+* HTTP and OSI / TCP/IP
 * HTTP vs REST
 * HTTP vs HTTP2
 * HTTP vs Websocket
 
+---
+### [HTTP overview](https://he.wikipedia.org/wiki/Hypertext_Transfer_Protocol#%D7%91%D7%A7%D7%A9%D7%95%D7%AA_HTTP)
+Data Encoding: not all data made equal
+
+* What methods did we use so far to pass data around?
+<!-- .element: class="fragment" -->
+
+* `application/x-www-form-urlencoded` VS `multipart/form-data`
+<!-- .element: class="fragment" -->
+
+* <!-- .element: class="fragment" -->[Example](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/POST#Example)
+
+* <!-- .element: class="fragment" -->[Demo](https://www.w3schools.com/tags/att_form_enctype.asp)
+
 
 ---
-### Routing
-* express expose an easy way to separate request to different routes
-```
-app.get(...);   // only GETs
-app.post(...);  // only POSTs
-app.all(...);   // all methods
-```
-* [express.route feature](https://expressjs.com/en/guide/routing.html)
 
----
-### [MiddleWares](https://expressjs.com/en/guide/using-middleware.html)
-* You can plug in functionality using app.use.
-```
-app.use(express.json);
-```
-* route is used like a middleware
-* know when to next
-* practice: add a logger middleware for all your routes
+### HTTP overview - Practice
 
----
-### Error redirect
-* [Express error handling](https://expressjs.com/en/guide/error-handling.html)
-* [Error redirect](https://expressjs.com/en/guide/error-handling.html)
+Read [html forms](https://www.w3schools.com/html/html_forms.asp), and build a simple upload app:
+* Client is a single html file, contain form with 2 fields
+    - name
+    - file
+* On form submit - send data to server (POST request)
+* Server accept the request and send status 200 and the text: 'accepted'
 
 ---
 
 ### Further reading
+* [Understanding HTML Form Encoding: URL Encoded and Multipart Forms](https://dev.to/sidthesloth92/understanding-html-form-encoding-url-encoded-and-multipart-forms-3lpa)
+* [res.json() vs res.send() vs res.end() in Express](https://blog.fullstacktraining.com/res-json-vs-res-send-vs-res-end-in-express/)
+
+### Extra
 * [GET-vs-POST](https://www.diffen.com/difference/GET-vs-POST-HTTP-Requests)
 * [PUT-vs-POST](https://stackoverflow.com/questions/630453/put-vs-post-in-restRequests)
-* [express.router vs app.method](https://stackoverflow.com/questions/28305120/differences-between-express-router-and-app-get)
-* [build a restful API](https://scotch.io/tutorials/build-a-restful-api-using-node-and-express-4#getting-started)
-* [Middleware and app.use vs app.all](http://qnimate.com/express-js-middleware-tutorial/)
-* [404 redirect in express](https://gist.github.com/primaryobjects/0beed74756074d3df6e3)
+
 
 ---
 
