--- a/module3_backend/m3.lesson02.md
+++ b/module3_backend/m3.lesson02.md
@@ -129,7 +129,7 @@ HTTP Request
 ### [HTTP overview](https://he.wikipedia.org/wiki/Hypertext_Transfer_Protocol#%D7%91%D7%A7%D7%A9%D7%95%D7%AA_HTTP)
 Data Encoding: not all data made equal
 
-* What methods did we use so far to pass data around?
+* What methods did we use so far to pass data around? (JSON, etc...)
 <!-- .element: class="fragment" -->
 
 * `application/x-www-form-urlencoded` VS `multipart/form-data`
@@ -152,7 +152,6 @@ Read [html forms](https://www.w3schools.com/html/html_forms.asp), and build a si
 * Server accept the request and send status 200 and the text: 'accepted'
 
 ---
-
 ### Further reading
 * [Understanding HTML Form Encoding: URL Encoded and Multipart Forms](https://dev.to/sidthesloth92/understanding-html-form-encoding-url-encoded-and-multipart-forms-3lpa)
 * [res.json() vs res.send() vs res.end() in Express](https://blog.fullstacktraining.com/res-json-vs-res-send-vs-res-end-in-express/)
@@ -160,7 +159,6 @@ Read [html forms](https://www.w3schools.com/html/html_forms.asp), and build a si
 ### Extra
 * [GET-vs-POST](https://www.diffen.com/difference/GET-vs-POST-HTTP-Requests)
 * [PUT-vs-POST](https://stackoverflow.com/questions/630453/put-vs-post-in-restRequests)
-
 
 ---
 
