--- a/module3_backend/m3.lesson03.md
+++ b/module3_backend/m3.lesson03.md
@@ -83,4 +83,5 @@ Practice:
 * Read [Debugging Express](https://expressjs.com/en/guide/debugging.html)
 * Read [file upload with multer](https://code.tutsplus.com/tutorials/file-upload-with-multer-in-node--cms-32088)
 * [Sending image files as API response](https://stackoverflow.com/questions/17515699/node-express-sending-image-files-as-api-response)
+* [Express Third-party middleware](https://expressjs.com/en/resources/middleware.html)
 
