--- a/module3_backend/m3.lesson04.md
+++ b/module3_backend/m3.lesson04.md
@@ -12,8 +12,8 @@
 3. Frontend Repo: React 
 4. Integration Check
 5. Implement CRUD
-6. Save Images
-7. Add [basic authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication#The_general_HTTP_authentication_framework)
+6. Working with Images
+7. Data validation and [basic authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication#The_general_HTTP_authentication_framework) 
 
 ---
 ### App Overview
@@ -26,24 +26,43 @@ Requirements:
     * Edit with a PUT request
     * Delete with a DELETE request
 * User can upload a single image with post
+* Bonus: Add Server side validation for requests with body (POST/PUT) 
 * Bonus: Add basic authentication - user need to log in in order to change the data
 
 ---
 ### Backend Repo: Static server + API
 * Create a new [express project](https://expressjs.com/en/starter/generator.html)
 ```shell script
-npx express-generator
+mkdir fakebook-server
+cd server
+npx express-generator --no-view --git 
 ```
+
+* Edit the `package.json` and `.gitignore` as you like and then
+```shell script
+npm install
+git init
+```
+* Convert to ES6: `var => const`
+* Change Port number so it won't collide with react default
+* install `nodemon`
+
+---
+### Backend Repo: Static server + API
+
 * Make sure you can serve static file from the `public` folder
 * On request to `\`, `public\index.html` should be loaded
 * Data will be stored on a JSON file: `db.json`
 * Additional (API) endpoint:
-    - `\posts` - all posts
-    - `'posts: id` - a single post by id
+    - `\api\posts` - all posts
+    - `\api\posts\:id` - a single post by id
 
 ---
 ### Frontend Repo: React 
 * Create a new [react project](https://github.com/facebook/create-react-app)
+```shell script
+npx create-react-app fakebook-client --typescript
+```
 * Add router with 3 routes: 
     - `\feed`  
     - `\create-post\`
@@ -54,13 +73,35 @@ npx express-generator
 
 ---
 ### Integration Check
+* Read data from server
+* Build client and serve static content from `public`
 
 ---
 ### Implement CRUD
+* Read all post:  `GET \api\posts` 
+* Read single post:  `GET \api\posts\:id` 
+* Create post:  `POST \api\posts\` 
+* Update post:  `PUT \api\posts\` 
+* Delete post:  `DELETE \api\posts\` 
+Find a safe way to determine new post id
 
 ---
 ### Save Images
+* Save images to `images` directory on server
+* Save image file name as part of the post data
+* Serve images using endpoint `\images\:imageFileName`
 
 ---
-### Add basic authentication
-* [express-basic-auth](https://www.npmjs.com/package/express-basic-auth)
+### Data validation and basic authentication
+* Validate data creation / update using [Joi](https://github.com/hapijs/joi)
+* Add basic authentication using [express-basic-auth](https://www.npmjs.com/package/express-basic-auth)
+
+---
+### Further reading
+* See JOI section on [Build RESTful APIs with Node and Express](https://www.youtube.com/watch?v=pKd0Rpw7O48)
+* [Joi vs express validator](https://101node.io/blog/javascript-validators-comparison-using-joi-vs-express-validator/)
+
+### HW
+* Finish class practice
+
+
