--- a/module3_backend/m3.lesson04.md
+++ b/module3_backend/m3.lesson04.md
@@ -25,6 +25,10 @@ Requirements:
     * Add with a POST request
     * Edit with a PUT request
     * Delete with a DELETE request
+    
+---
+### App Overview
+Requirements:
 * User can upload a single image with post
 * Bonus: Add Server side validation for requests with body (POST/PUT) 
 * Bonus: Add basic authentication - user need to log in in order to change the data
@@ -32,14 +36,14 @@ Requirements:
 ---
 ### Backend Repo: Static server + API
 * Create a new [express project](https://expressjs.com/en/starter/generator.html)
-```shell script
+```
 mkdir fakebook-server
 cd server
 npx express-generator --no-view --git 
 ```
 
 * Edit the `package.json` and `.gitignore` as you like and then
-```shell script
+```
 npm install
 git init
 ```
