--- a/module3_backend/m3.lesson05.md
+++ b/module3_backend/m3.lesson05.md
@@ -9,11 +9,40 @@
 * [What is MongoDB](https://www.youtube.com/watch?v=EE8ZTQxa0AM)
 * [MongoDB In 30 Minutes](https://www.youtube.com/watch?v=pWbMrx5rVBE)
 
+---
+
 ### Agenda
-1. Installation
-2. MongoDB Core components
-3. Query and Projection
-4. Access MongoDB from node
+1. DB Intro
+2. Installation
+3. MongoDB Core components
+4. Query and Projection
+5. Operators and Cursor methods
+6. Compass
+7. Access MongoDB from node
+
+---
+### DB Intro
+* JSON files vs Database
+<!-- .element: class="fragment" -->
+
+* SQL DB, tables and query optimization
+<!-- .element: class="fragment" -->
+
+* From SQL to NOSQL
+<!-- .element: class="fragment" -->
+
+* [JSON and BSON](https://www.mongodb.com/json-and-bson)
+<!-- .element: class="fragment" -->
+
+* DBs, Collections, Documents and Fields
+<!-- .element: class="fragment" -->
+
+
+---
+### DB Intro
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/EE8ZTQxa0AM" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 ### Installation
@@ -48,73 +77,109 @@ mongod --config mongod.cfg
 
 ---
 ### MongoDB Core components - Starting mongod
-practice: read about the config flags, then start the mongod with:
+Practice: read about the config flags, then start the mongod with:
 ```
 mongod --directoryperdb --dbpath .\data\ --logpath .\log\mongod.log --logappend
 ```
-* bonus: set the flag in your config options and run it with
+* Bonus: set the flag in your config options and run it with
 ```
 mongod --config mongod.cfg
 ```
 
-
 ---
 ### MongoDB Core components - Mongo shell
 starting a db
-* show dbs - show all dbs
-* use <DB NAME> - use / create db
-* db - show active
-practice: create db with the name robo
+* `show dbs` - show all dbs
+* `use <DB NAME>` - use / create db
+* `db` - show active
+Practice: create db with the name "blog"
 
 ---
 ### MongoDB Core components - Mongo shell
 [creating a user](https://docs.mongodb.com/manual/reference/method/db.createUser/#create-user-with-roles)
 ```
 db.createUser({
-  user: "moshe",
+  user: "yuval",
   pwd: "123456",
   roles: [ "readWrite", "dbAdmin" ]
 })
 ```
 practice: add a user
 ---
-### MongoDB Core components - Mongo shell [basic commands](https://docs.mongodb.com/manual/reference/command/#query-and-write-operation-commands)
-* db.createCollection('items') - create a collection
+### MongoDB Core components - Mongo shell [basic commands](https://docs.mongodb.com/manual/reference/mongo-shell/)
+* db.createCollection('posts') - create a collection
 * show collections - show all db collections
-* db.getCollection('items') - get collection
-* db.getCollection('items').insert({name: 'table', type: 'furniture'}) -
+* db.getCollection('posts') - get collection, same as db.posts
+* db.posts.insert({name: 'table', type: 'furniture'}) -
 insert a document
-* db.getCollection('items').find() - show all documents
-* db.getCollection('items').find().pretty() - pretty print
+* db.posts.find() - show all documents
+* db.posts.find({userId: 3}) - show posts where userId = 3
+* db.posts.find().pretty() - pretty print
+
+---
+
+### MongoDB Core components - Mongo shell [basic commands](https://docs.mongodb.com/manual/reference/mongo-shell/)
+update a  a document
+* db.posts.update({id: 42}, {id: 41, body: "some text"})   // replace document
+* db.posts.update({id: 42}, {$set: {body: "some text"})    // replace field
 
 
 ---
-### MongoDB Core components - Mongo shell [basic commands](https://docs.mongodb.com/manual/reference/command/#query-and-write-operation-commands)
-practice:
-- create a collection named *parts*
-- add all parts form the robot-lab backend
+
+### MongoDB Core components - Mongo shell [basic commands](https://docs.mongodb.com/manual/reference/mongo-shell/)
+Practice:
+* Create a collection named "posts"
+* Add 10 posts from https://jsonplaceholder.typicode.com/posts
+* Try all basic commands from previous slides
+* Change the `title` and `body` of one on the posts
+* Bonus: add "comments" from `json` file using `mongoimport`
 
 ---
 ### [Query and Projection](https://docs.mongodb.com/manual/reference/operator/query/)
 ```
-db.items.find(query, projection);
+db.posts.find(query, projection);
 ```
 see [the docs](https://docs.mongodb.com/manual/tutorial/project-fields-from-query-results/)
 
 ---
+### [Query and Projection](https://docs.mongodb.com/manual/reference/operator/query/)
+What would these commands do?
+```
+db.posts.find({}, {userId: 1, title: 1})
+db.posts.find({}, {userId: 0})
+```
+
+[Query Documents (SQL vs NOSQL)](https://docs.mongodb.com/manual/tutorial/query-documents/)
+
+---
+### [Operators](https://docs.mongodb.com/manual/reference/operator/) and [Cursor methods](https://docs.mongodb.com/manual/reference/method/js-cursor/)
+What would these commands do?
+```
+db.posts.find({ id: { $gte: 20 } })
+db.posts.find({ id: { $eq: 20 } })
+db.posts.find({ id: { $not: {$eq: 20} } })
+db.posts.find({ title: { $regex: /[a]/ } })
+db.posts.find({ $and: [{title: { $regex: /[a]/ }}, {body: { $regex: /[b]/ }}]})
+```
+
+A word about Cursor and [sort](https://docs.mongodb.com/manual/reference/method/cursor.sort/)
+<!-- .element: class="fragment" -->
+
+---
+
 ### MongoDB compass
 * The GUI for MongoDB. Allow you to visually explore your data, Run queries etc.
-* practice: [install compass](https://docs.mongodb.com/compass/master/install/) and check it out
+* Practice: [install compass](https://docs.mongodb.com/compass/master/install/) and use it to add 2 documents
 
 ---
 ### Access MongoDB from node - using mongodb module
-1. install [mongo package](https://www.npmjs.com/package/mongodb)
+1. Clone / Use Post api server
+2. install [mongo package](https://www.npmjs.com/package/mongodb)
 ```
 npm i mongodb
 ```
-2. [connect to db](https://www.npmjs.com/package/mongodb#connect-to-mongodb)
-3. get a [cursor and work with it](https://docs.mongodb.com/manual/tutorial/iterate-a-cursor/)
-
+3. [connect to db](https://www.npmjs.com/package/mongodb#connect-to-mongodb)
+4. Implement data read and update - get a [cursor and work with it](https://docs.mongodb.com/manual/tutorial/iterate-a-cursor/)
 
 ---
 ### Access MongoDB from node - using mongoose
@@ -123,8 +188,11 @@ Using [mongoose](http://mongoosejs.com/)
 
 ---
 ### Further reading
-[MongoDB docs getting-started](https://docs.mongodb.com/manual/tutorial/getting-started/)
-[data-models-relationships](https://docs.mongodb.com/manual/applications/data-models-relationships/)
+* [MongoDB docs getting-started](https://docs.mongodb.com/manual/tutorial/getting-started/)
+* [data-models-relationships](https://docs.mongodb.com/manual/applications/data-models-relationships/)
 
 ### HW:
-* Connect your Wiki (or robotlab app) to Mongo DB
+* Finish connect your post server to Mongo DB
+
+### Extra
+* [MongoDB Crash Course 2019](https://www.youtube.com/watch?v=-56x56UppqQ)
