--- a/module3_backend/m3.lesson05.md
+++ b/module3_backend/m3.lesson05.md
@@ -185,7 +185,6 @@ npm i mongodb
 ### Access MongoDB from node - using mongoose
 Using [mongoose](http://mongoosejs.com/)
 
-
 ---
 ### Further reading
 * [MongoDB docs getting-started](https://docs.mongodb.com/manual/tutorial/getting-started/)
@@ -196,3 +195,4 @@ Using [mongoose](http://mongoosejs.com/)
 
 ### Extra
 * [MongoDB Crash Course 2019](https://www.youtube.com/watch?v=-56x56UppqQ)
+* [Express with MongoDB](https://www.youtube.com/watch?v=ZKwrOXl5TDI)
