--- a/module3_backend/m3.lesson04.md
+++ b/module3_backend/m3.lesson04.md
@@ -1,5 +1,5 @@
 ## Module 3 Lesson 4
-### Express - Blog Excersis
+### Express - Blog exercise
 (This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
