--- a/module3_backend/m3.lesson07.md
+++ b/module3_backend/m3.lesson07.md
@@ -1,5 +1,5 @@
 ## Module 3 Lesson 7
-### From FS to DB - Blog exercise
+### From FS to DB - Fakebook exercise 2
 (This document is optimized for presentation using [reveal-md](https://github.com/webpro/reveal-md))
 
 ---
