--- a/module3_backend/m3.lesson06.md
+++ b/module3_backend/m3.lesson06.md
@@ -299,7 +299,9 @@ db.publishers.aggregate([
 ---
 ### Mongoose CRUD practice
 * [Mongoose overview](https://mongoosejs.com/docs/index.html)
-* [Mongoose connections](https://mongoosejs.com/docs/connections.html#connection_pools)
+* [Mongoose connections](https://mongoosejs.com/docs/connections.html#connection_pools) and [buffer](https://mongoosejs.com/docs/guide.html#bufferCommands)
+* Mongoose default collection name
+* Scheme options, validations and keyVersion
 * Apply full CRUD for posts API server using mongoose.
 
 ---
@@ -309,11 +311,14 @@ db.publishers.aggregate([
 [MongoDB Aggregation Pipeline 2](https://codeburst.io/mongodb-aggregation-pipeline-by-example-part-2-148df95accd3)
 
 ___
+
 ### HW:
 * Finish post API server CRUD with mongoose
 
 ### Extra
-[MongoDB relationships: embed or reference?](https://stackoverflow.com/questions/5373198/mongodb-relationships-embed-or-reference)
-[MongoDB and Mongoose](https://www.youtube.com/watch?v=WDrU305J1yw)
-[The Problem with MongoDB](https://hackernoon.com/the-problem-with-mongodb-d255e897b4b)
-[MongoDB production-notes](https://docs.mongodb.com/manual/administration/production-notes/)
+* [MongoDB relationships: embed or reference?](https://stackoverflow.com/questions/5373198/mongodb-relationships-embed-or-reference)
+* [MongoDB and Mongoose](https://www.youtube.com/watch?v=WDrU305J1yw)
+* [Mongoose versionKey](https://mongoosejs.com/docs/guide.html#versionKey)
+* [The Problem with MongoDB](https://hackernoon.com/the-problem-with-mongodb-d255e897b4b)
+* [MongoDB production-notes](https://docs.mongodb.com/manual/administration/production-notes/)
+* [Mongoose Versioning](https://aaronheckmann.tumblr.com/post/48943525537/mongoose-v3-part-1-versioning)
