--- a/module3_backend/m3.lesson07.md
+++ b/module3_backend/m3.lesson07.md
@@ -11,7 +11,7 @@
 ### Agenda
 1. App Recap
 2. Work plan 
-3. Saving post data and images
+3. Code code code!
 
 ---
 ###  App Recap
@@ -26,10 +26,20 @@ What do we have so far?
 
 ---
 ### Work plan
-1. Connecting MongoDB and create "Blog" DB + "posts" collection
+1. Connecting MongoDB and create "fakebook" DB + "posts" collection
 2. Add Mongoose to server side
 3. Store textual data on DB (current JSON data)
 4. Store images on DB
 5. Bonus: use atlas to store data on the cloud 
 6. Bonus2: deploy server code (including client) to Heroku 
 
+---
+### Code code code!
+<img src="./assets/codelikecrazy.gif" height="500px">
+
+
+---
+### Food for thought
+* [Three things you should never put in your database](https://www.revsys.com/tidbits/three-things-you-should-never-put-your-database/)
+* [When to use GridFS](https://docs.mongodb.com/manual/core/gridfs/index.html#when-to-use-gridfs)
+* [Storing and Retrieving files from MongoDB using MEAN stack and GridFS](https://medium.com/@parthkamaria/storing-and-retrieving-files-from-mongodb-using-mean-stack-and-gridfs-aebd8b91cf38)
