--- a/module3_backend/m3.lesson08.md
+++ b/module3_backend/m3.lesson08.md
@@ -48,13 +48,21 @@ FE80::0202:B3FF:FE1E:8329   //IPv6
 <!-- .element: class="fragment" -->
 
 ---
-### Websocket - practice
-Build a simple chat:
-* home page: user can type a name and click a "join chat" button
-* chat room: contain conversation area, text area and "send" button
-* use [socket.io](https://socket.io/) for all chat communication
+### Websocket - chat practice
+* Join component: user can type a name, pick a "beast", and click a "join chat" button
+* Chat room component: contain conversation area, text area and "send" button
+* On submit, all users in the room should see the user name and message 
+    ```
+    Mad Max (Werewolf): nice to meet y'all :)
+    Bob Mcgee (Minotaur): welcome dude.
+    ```
+  
+ ---
+ ### Websocket - chat practice
+* Use [socket.io](https://socket.io/). see [socket.io get-started](https://socket.io/get-started/chat/)
+* Create react-based client and style it nicely 
 * Bonus: remove user from chat room if user disconnected
-* Bonus: upload to github + deploy to server on heroku / firebase
+* Bonus: Add a beast avatar
 
 ---
 ### [HTTPS](https://he.wikipedia.org/wiki/HTTP_Secure)
