--- a/module3_backend/m3.lesson08.md
+++ b/module3_backend/m3.lesson08.md
@@ -41,6 +41,7 @@ FE80::0202:B3FF:FE1E:8329   //IPv6
 * <!-- .element: class="fragment" -->[Subnet mask](https://he.wikipedia.org/wiki/Subnet_mask)
 
 ---
+
 ### Websocket
 * providing full-duplex communication channels over a single TCP connection
 <!-- .element: class="fragment" -->
@@ -48,16 +49,18 @@ FE80::0202:B3FF:FE1E:8329   //IPv6
 <!-- .element: class="fragment" -->
 
 ---
+
 ### Websocket - chat practice
 * Join component: user can type a name, pick a "beast", and click a "join chat" button
 * Chat room component: contain conversation area, text area and "send" button
 * On submit, all users in the room should see the user name and message 
-    ```
-    Mad Max (Werewolf): nice to meet y'all :)
-    Bob Mcgee (Minotaur): welcome dude.
-    ```
+```
+Mad Max (Werewolf): nice to meet y'all :)
+Bob Mcgee (Minotaur): welcome dude.
+```
   
- ---
+---
+
  ### Websocket - chat practice
 * Use [socket.io](https://socket.io/). see [socket.io get-started](https://socket.io/get-started/chat/)
 * Create react-based client and style it nicely 
@@ -66,14 +69,9 @@ FE80::0202:B3FF:FE1E:8329   //IPv6
 
 ---
 ### [HTTPS](https://he.wikipedia.org/wiki/HTTP_Secure)
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/w0QbnxKRD0w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
----
-### [HTTPS](https://he.wikipedia.org/wiki/HTTP_Secure)
 * HTTP Secured
 <!-- .element: class="fragment" -->
-* HTTP + TSL/SSL = HTTPS
+* HTTP + TLS/SSL = HTTPS
 <!-- .element: class="fragment" -->
 * If everybody can listen to data traffice - How does it works?
 <!-- .element: class="fragment" -->
@@ -83,6 +81,11 @@ FE80::0202:B3FF:FE1E:8329   //IPv6
 <!-- .element: class="fragment" -->
 * Does not protect against Man in the middle attack
 <!-- .element: class="fragment" -->
+
+---
+### [HTTPS](https://he.wikipedia.org/wiki/HTTP_Secure)
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/w0QbnxKRD0w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 
