--- a/module4_advanced_dev/m4.lesson01.md
+++ b/module4_advanced_dev/m4.lesson01.md
@@ -7,28 +7,188 @@
 ### Prep
 * [How NOT to Store Passwords](https://www.youtube.com/watch?v=8ZtInClXe1Q)
 * [OAuth 2.0: An Overview](https://www.youtube.com/watch?v=CPbvxxslDTU)
-* [OAuth Login](https://www.youtube.com/watch?v=sakQbeRjgwg&list=PL4cUxeGkcC9jdm7QX143aMLAqyM-jTZ2x&index=1)
+* [OAuth Tutorial](https://www.youtube.com/watch?v=sakQbeRjgwg&list=PL4cUxeGkcC9jdm7QX143aMLAqyM-jTZ2x&index=1)
 
 ### Agenda
-1. 
-2. 
-https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication
-https://docops.ca.com/ca-single-sign-on/12-52-sp1/en/configuring/policy-server-configuration/authentication-schemes
+1. AAA?
+2. The Evolution of Authentication 
+3. Let's code
+
 ---
 
-### A
+### [AAA?](https://www.techopedia.com/definition/24130/authentication-authorization-and-accounting-aaa)
+We all use online accounts and passwords, but what is
+the difference between Authentication Authorization and Accounting?
 
+Each answer a different question:
+<!-- .element: class="fragment" -->
+
+* Authentication - Who am I?
+<!-- .element: class="fragment" -->
+
+* Authorization - Am I allowed to do that?
+<!-- .element: class="fragment" -->
+
+* Accounting - What did I do so far?
+<!-- .element: class="fragment" -->
+
+---
+
+### The Evolution of Authentication 
+Authentication is a vast subject - we'll cover small part of it,
+Which is about asking for protected (e.i. not public) resources using HTTP.
+What are the minimum requirements for authentication using HTTP?
+
+* Client should provide name and password to access protected resources
+<!-- .element: class="fragment" -->
+
+* Server should be able to verify the password
+<!-- .element: class="fragment" -->
+
+* Eavesdropping protection
+<!-- .element: class="fragment" -->
+
+How would you suggest to implement that?
+<!-- .element: class="fragment" -->
+
+---
+
+### The Evolution of Authentication 
+Step 1: [Basic HTTP Authentication](https://developer.mozilla.org/en-US/docs/Web/HTTP/Authentication)
+- `name:pass` passed using HTTP header using Base64 (NOT encrypted), With HTTPS (SSL/TLS)
+
+Pros:
+* Simple to implement, yet somewhat secured
+<!-- .element: class="fragment" -->
+Cons:
+* Client send credentials on each request
+<!-- .element: class="fragment" -->
+* Client developers might be tempted to save credentials on storage
+<!-- .element: class="fragment" -->
+* Server is required to secured credentials data
+<!-- .element: class="fragment" -->
+
+---
+
+### The Evolution of Authentication 
+Step 2: Session Token / Cookie 
+- `name:pass` passed once to get user a session token, next request will send a token instead.
+
+Basic info:
+* "Session" is a period of time defined by the **server**. 
+* "Token" is a fancy word for a string which holds data (like a ticket)
+* Token should be validated on each request - it's the only way to authenticate the user without a password 
+* If the client loose (e.i. delete) the token - re-authentication will be required
+
+---
+
+### The Evolution of Authentication 
+Step 2: Session cookie / Token
+
+Pros:
+* Credentials sent only once (in a session)
+<!-- .element: class="fragment" -->
+* Token is not a password - can be stored on client
+<!-- .element: class="fragment" -->
+
+Cons:
+* Require extra work (and some resources) on server
+<!-- .element: class="fragment" -->
+* Token stored on the client might be stolen (Session cookie is a bit more secured than localStorage)
+<!-- .element: class="fragment" -->
+* Server is required to secured credentials data
+<!-- .element: class="fragment" -->
+
+---
+
+### The Evolution of Authentication 
+What is the problem with storing credentials data? Isn't it stored safely on our server / DB?
+
+**Always** assume your backend will be hacked eventually, and the user's data is **Sensitive** (why?)
+<!-- .element: class="fragment" -->
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8ZtInClXe1Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
+### The Evolution of Authentication 
+Step 3: OAuth v2.0 and OpenID Connect
+
+TL;DR
+We already have online accounts on google, facebook etc.
+We can use the exist Authentication mechanism in multiple application
+
+---
+
+### The Evolution of Authentication 
+Step 3: OAuth v2.0 and OpenID Connect
+
+OAuth is an open standard for **access delegation**
+<!-- .element: class="fragment" -->
+
+* In the modern web world we often need a way to share data (addresses, contacts, images etc.) 
+between accounts.
+<!-- .element: class="fragment" -->
+
+* OAuth protocol let a resource owner (a person) the ability to let a 
+specific client (an app) access for specific data (scope)
+<!-- .element: class="fragment" -->
+
+* That means OAuth is about **Authorization** rather than **Authentication**
+<!-- .element: class="fragment" -->
+
+* OAuth v2.0 is improved, simpler and more secure version. Some consider v1.0 as deprecated, 
+although still in use for some systems. we'll use OAuth v2.0.
+<!-- .element: class="fragment" -->
+
+---
+
+### The Evolution of Authentication 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/CPbvxxslDTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
+### The Evolution of Authentication 
+* OAuth 2.0 scheme overview
+<!-- .element: class="fragment" -->
+
+* Registering as application on OAuth server
+<!-- .element: class="fragment" -->
+
+* Access tokens and hijack prevention
+<!-- .element: class="fragment" -->
+
+* Note: grant step can be skipped
+<!-- .element: class="fragment" -->
+
+* OpenID Connect overview
+<!-- .element: class="fragment" -->
+
+* OpenID and Session tokens
+<!-- .element: class="fragment" -->
+
+
+---
+
+### Let's code
+Before you begin - a word about [Passport.js & Strategies](http://www.passportjs.org/)
+* Client secret and id already created for you
+Steps:
+1. Set auth routes (login, logout, google, google/redirect) - [branch4](https://github.com/webbeast2019/oauth-playlist/tree/lesson-4)
+2. `npm install passport passport-google-oauth20` & set up passport - [branch5](https://github.com/webbeast2019/oauth-playlist/tree/lesson-5) to 7
+3. Set redirect URI and callback - [branch8](https://github.com/webbeast2019/oauth-playlist/tree/lesson-8) to 9
+4. Setting mongo DB, save and retrieve users - [branch10](https://github.com/webbeast2019/oauth-playlist/tree/lesson-8) to 13
 
 ---
 
 ### Further reading
-* [Password Authentication with passport](https://www.youtube.com/watch?v=gYjHDMPrkWU&list=PLpPnRKq7eNW3Qm2OfoJ3Hyvf-36TulLDp)
-
-
----
+* [OAuth 2.0 and OpenID Connect](https://www.youtube.com/watch?v=996OiexHze0)
 
 ### Home Work:
-* Finish class practice
+* Finish watching [OAuth Tutorial](https://www.youtube.com/watch?v=sakQbeRjgwg&list=PL4cUxeGkcC9jdm7QX143aMLAqyM-jTZ2x&index=1)
+* Finish class practice (save and retrieve users from DB)
 
 ### Extra
-* Investigate demo project
+* [Password Authentication with passport](https://www.youtube.com/watch?v=gYjHDMPrkWU&list=PLpPnRKq7eNW3Qm2OfoJ3Hyvf-36TulLDp)
+* [In depth practical explanation about OAuth 2 and OpenID Connect](https://www.oreilly.com/library/view/identity-and-data/9781491937006/ch04.html) by Oreilly
+
