--- a/module4_advanced_dev/m4.lesson01.md
+++ b/module4_advanced_dev/m4.lesson01.md
@@ -134,6 +134,11 @@ between accounts.
 specific client (an app) access for specific data (scope)
 <!-- .element: class="fragment" -->
 
+---
+
+### The Evolution of Authentication 
+Step 3: OAuth v2.0 and OpenID Connect
+
 * That means OAuth is about **Authorization** rather than **Authentication**
 <!-- .element: class="fragment" -->
 
